package at.technikum.Invicrea2WebShopbackend.model;

public enum Role {
    USER,
    ADMIN
}
